@@ -1,0 +1,2 @@
+Fix IDLE autocomplete & calltip popup colors. Prevent conflicts with Linux
+dark themes (and slightly darken calltip background).
